js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunction/lib1/l1.5.kt
inline fun foo() : Int {
    try {
        val x = listOf(1)
        return x[2]
    } catch(e: Exception) {
        throw NumberFormatException()
    }
}
